--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TodoDb;User Id=sa;Password=Your_password123;"
+    "DefaultConnection": "Server=localhost;Database=TodoDb;User Id=SA;Password=Fitness32_;TrustServerCertificate=True;"
   }
 }
